--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,7 @@ font-family: 'Raleway', sans-serif;
 
 
 a{
-  color: #fff;
+  color: #87AAAA;
 }
 
 
@@ -68,13 +68,13 @@ text-align: center;
 .journalBody{
   font-size: 2rem;
   width: 45%;
-  margin: 10% auto 10% auto;
+  margin: 20% auto 20% auto;
 }
 
 .journalLink {
   color: #363062;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 4rem;
 }
 
 a:hover{
@@ -83,4 +83,73 @@ a:hover{
 
 .journalDiv {
   background-color: #D9D7F1;
+}
+
+
+
+/* newsletter */
+
+.newsletterSignup{
+  text-align: center;
+}
+
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto 10% auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.top{
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.middle{
+  border-radius: 0;
+  margin-bottom: -1px;
+}
+
+.bottom {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+
+.newsletterBody{
+  font-size: 2rem;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+
+
+/* footer */
+
+.contacts{
+  color: #000;
+  padding: 3% 3% 0 3%;
+}
+.footer{
+  text-align: center;
+  background-color: #BAABDA;
+}
+.copyrightText{
+  padding-top: 3%;
+  padding-bottom: 2%;
 }
