--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 
 
-<footer>
+<footer class="footer-padding">
 <p>MindSpace © Rumble 2022</p>
 <a href="#"><i class="fa-brands fa-facebook"></i></a>
 <a href="#"></a>
