--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,10 +145,19 @@ a:hover{
   color: #000;
   padding: 3% 3% 0 3%;
 }
-.footer{
-  text-align: center;
-  background-color: #BAABDA;
+.footer-padding {
+	padding-bottom: 60px;
 }
+
+.footer {
+	position: absolute;
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: #BAABDA;
+}
+
 .copyrightText{
   padding-top: 3%;
   padding-bottom: 2%;
